chore: improve stuff a bit